vistas y urls para agregar productos y ver carrito

--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -15,6 +15,11 @@
         </a>
       </h2>
       <p>${{ product.price }}</p>
+      <form action="{% url 'cart:cart_add' product.id %}" method="post">
+        {{ cart_product_form }}
+        {% csrf_token %}
+        <input type="submit" value="Add to cart">
+      </form>
       {{ product.description|linebreaks }}
   </div>
 {% endblock %}
