--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -26,7 +26,14 @@
               </a>
             </td>
             <td>{{ product.name }}</td>
-            <td>{{ item.quantity }}</td>
+            <td>
+              <form action="{% url 'cart:cart_add' product.id %}" method="post">
+                {{ item.update_quantity_form.quantity }}
+                {{ item.update_quantity_form.update }}
+                <input type="submit" value="Update">
+                {% csrf_token %}
+              </form>
+            </td>
             <td><a href="{% url 'cart:cart_remove' product.id %}">Remove</a></td>
             <td>{{ item.price }}</td>
             <td>{{ item.total_price }}</td>
