Se creo views, templates, url y forms necesarios para registrar una orden

--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -50,6 +50,6 @@
 
   <p>
     <a href="{% url 'shop:product_list' %}">Continue shopping</a>
-    <a href="#">Checkout</a>
+    <a href="{% url 'orders:order_create' %}">Checkout</a>
   </p>
 {% endblock %}
