Se agrego imagen no image

--- a/shop/templates/shop/product/list.html
+++ b/shop/templates/shop/product/list.html
@@ -25,7 +25,7 @@
     {% for product in products %}
       <div class="">
         <a href="{{ product.get_absolute_url }}">
-          <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static 'img/no_image.png' %}{% endif %}" />
+          <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static 'img/noimage.jpg' %}{% endif %}" />
         </a>
         <a href="{{ product.get_absolute_url }}">
           {{ product.name }}
