--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -7,7 +7,7 @@
 
 {% block content %}
   <div class="">
-      <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static 'img/no_image.png' %}{% endif %}" />
+      <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static 'img/noimage.jpg' %}{% endif %}" />
       <h1>{{ product.name }}</h1>
       <h2>
         <a href="{{ product.category.get_absolute_url}}">
