Se puede ver el descuento en la vista de ordenes

--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -16,8 +16,14 @@
           <span>${{ item.total_price }}</span>
         </li>
       {% endfor %}
+      {% if cart.coupon %}
+        <li>
+          "{{ cart.coupon.code }}" ({{ cart.coupon.discount }}% off)
+          <span>- ${{ cart.get_discount|floatformat:"2"}}</span>
+        </li>
+      {% endif %}
     </ul>
-    <p>Total: ${{ cart.get_total_price }}</p>
+    <p>Total: ${{ cart.get_total_price_after_discount|floatformat:"2" }}</p>
   </div>
 
   <form action="." method="post">
