--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>{% block title %}My shop{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   </head>
   <body>
     <div class="">
@@ -25,5 +25,8 @@
     </header>
     {% block content %}
     {% endblock %}
+
+    <script src="{% static 'js/jquery.min.js' %}" charset="utf-8"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}" charset="utf-8"></script>
   </body>
 </html>
