--- a/shop/templates/shop/product/list.html
+++ b/shop/templates/shop/product/list.html
@@ -6,32 +6,41 @@
 {% endblock %}
 
 {% block content %}
-  <div class="">
-      <h3>Categories</h3>
-      <ul>
-        <li {% if not category %}class="selected"{% endif %}>
-          <a href="{% url 'shop:product_list' %}">All</a>
-        </li>
-        {% for c in categories %}
-        <li {% if category.slug == c.slug %}class="selected"{% endif %}>
-          <a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
-        </li>
-        {% endfor %}
-      </ul>
-  </div>
-  <div class="">
-    <h1>{% if category %}{{ category.name }}{% else %}Products{% endif %}</h1>
+  <div class="row">
+      <div class="col-md-3">
+        <h3>Categories</h3>
 
-    {% for product in products %}
-      <div class="">
-        <a href="{{ product.get_absolute_url }}">
-          <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static 'img/noimage.jpg' %}{% endif %}" />
-        </a>
-        <a href="{{ product.get_absolute_url }}">
-          {{ product.name }}
-        </a>
-        ${{ product.price }}
+        <div class="list-group">
+          <a href="{% url 'shop:product_list' %}" class="list-group-item {% if not category %}active{% endif %}">
+            All
+          </a>
+          {% for c in categories %}
+            <a href="{{ c.get_absolute_url }}" class="list-group-item {% if category.slug == c.slug %}active{% endif %}">
+              {{ c.name }}
+            </a>
+          {% endfor %}
+        </div>
       </div>
-    {% endfor %}
+
+      <div class="col-md-9">
+        <h1>{% if category %}{{ category.name }}{% else %}Products{% endif %}</h1>
+
+        {% for product in products %}
+          <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+              <a href="{{ product.get_absolute_url }}">
+                <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static 'img/noimage.jpg' %}{% endif %}" />
+              </a>
+              <div class="caption">
+                <a href="{{ product.get_absolute_url }}" style="display:block">
+                  {{ product.name }}
+                </a>
+                <h3>${{ product.price }}</h3>
+              </div>
+            </div>
+          </div>
+        {% endfor %}
+      </div>
   </div>
+
 {% endblock %}
