--- a/orders/templates/orders/order/created.html
+++ b/orders/templates/orders/order/created.html
@@ -5,7 +5,9 @@
 {% endblock %}
 
 {% block content %}
+<div class="row">
   <h1>Thank you</h1>
 
-  <p>Your order has been successfully completed. Your order number is <strong>{{ order.id }}</strong></p>  
+  <p>Your order has been successfully completed. Your order number is <strong>{{ order.id }}</strong></p>
+</div>  
 {% endblock %}
