--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -26,7 +26,7 @@
             </a>
           </p>
           {% else %}
-            Your cart is empty.
+            <p class="navbar-text navbar-right">Your cart is empty.</p>
           {% endif %}
         {% endwith %}
       </div>
